--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
