Configuración de datasource para Railway con variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+#spring.application.name=spring-ecomerce
+#spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=${JDBC_URL}
+#spring.datasource.username=${JDBC_USERNAME}
+#spring.datasource.password=${JDBC_PASSWORD}
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 spring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
