--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,11 @@
-#spring.application.name=spring-ecomerce
-#spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=${JDBC_URL}
-#spring.datasource.username=${JDBC_USERNAME}
-#spring.datasource.password=${JDBC_PASSWORD}
-
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-spring.application.name=spring-ecomerce
+gitspring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 
