--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-gitspring.application.name=spring-ecomerce
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+spring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
 
-
+server.port=8080    
