--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=cactus3746
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
-
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
+spring.mvc.static-path-pattern=/static/**
 
-server.port=8080    
+
+server.port=8080
+
