--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,33 @@
 services:
   app:
     build:
-      context: ./spring-ecomerce
+      context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "${APP_PORT}:8080"
     restart: always
     depends_on:
-      db:
-        condition: service_healthy   # espera a que MySQL pase healthcheck
+      - db
     environment:
-      JDBC_URL: jdbc:mysql://db:3306/ecommerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-      JDBC_USERNAME: root
-      JDBC_PASSWORD: cactus3746
+      SPRING_DATASOURCE_URL: "jdbc:mysql://db:3306/ecommerce?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC"
+      SPRING_DATASOURCE_USERNAME: "root"
+      SPRING_DATASOURCE_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
     healthcheck:
-      # da un poco más de tiempo para que levante Spring
       test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 40s
+    networks:
+      - backend
 
   db:
     image: mysql:8.3.0
     ports:
-      - "3307:3306"
+      - "${DB_PORT}:3306"
     environment:
-      MYSQL_DATABASE: ecommerce
-      MYSQL_ROOT_PASSWORD: cactus3746
+      MYSQL_DATABASE: "ecommerce"
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
     volumes:
       - db_data:/var/lib/mysql
     restart: always
@@ -37,6 +37,12 @@ services:
       timeout: 5s
       retries: 5
       start_period: 20s
+    networks:
+      - backend
 
 volumes:
   db_data:
+
+networks:
+  backend:
+    driver: bridge
