Configurar datasource para usar SPRING_DATASOURCE_* y fallback a DATABASE_*

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DATABASE_USERNAME}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DATABASE_PASSWORD}}
 
 spring.application.name=spring-ecomerce
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 spring.mvc.static-path-pattern=/static/**
-
 server.port=8080
 
