--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 APP_PORT=9090
 DB_PORT=3308
+
+SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC
+SPRING_DATASOURCE_USERNAME=root
+SPRING_DATASOURCE_PASSWORD=cactus3746
+
 MYSQL_ROOT_PASSWORD=cactus3746
