--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ management.endpoint.health.show-details=always
 
 spring.mvc.static-path-pattern=/static/**
 server.port=8080
+server.address=0.0.0.0
 
