modificacion de properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL}}
+# Primero usamos SPRING_DATASOURCE_URL si existe;
+# si no, construimos la URL JDBC a partir de DATABASE_URL
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://${DATABASE_URL}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DATABASE_USERNAME}}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DATABASE_PASSWORD}}
 
