Configuración para despliegue en Render con PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-# Primero usamos SPRING_DATASOURCE_URL si existe;
-# si no, construimos la URL JDBC a partir de DATABASE_URL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://${DATABASE_URL}}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DATABASE_USERNAME}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DATABASE_PASSWORD}}
+# PostgreSQL en Render
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.application.name=spring-ecomerce
+# Hibernate config
 spring.jpa.hibernate.ddl-auto=update
 
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
-
+# App config
+spring.application.name=spring-ecomerce
 spring.mvc.static-path-pattern=/static/**
 server.port=8080
 server.address=0.0.0.0
 
+# Actuator health
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
